--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <br>
 <p style="text-align:center">
      <a href="mailto:000000000o@163.com">
-        联系我</a>
+        邮件联系我</a>
     </p>
 <p style="text-align:center">
-    <a href="sms:18681256827">
+    <a href="sms:19983266827">
         电话联系我</a>
     </p>
     <p style="color: fuchsia;text-align:center">
