--- a/index.html
+++ b/index.html
@@ -16,22 +16,21 @@
     <h2 style="color:blue;text-align:center">欢迎访问我的个人网页</h2>
     <br>
 <div style="width:960px;margin:0 auto;height:auto;">
-    <img src="https://s1.328888.xyz/2022/08/02/OKo5E.jpg"><p style="text-align:center;"></p></div>
-  
-
-    <br>
+    <p style="text-align:center;">
+<img src="https://s1.328888.xyz/2022/08/02/OKo5E.jpg" width="500px" height="500px"></p></div>
+      <br>
 <p style="text-align:center">
      <a href="mailto:000000000o@163.com">
-        邮件联系我</a>
+        联系我</a>
     </p>
 <p style="text-align:center">
-    <a href="sms:19983266827">
+    <a href="sms:18681256827">
         电话联系我</a>
     </p>
     <p style="color: fuchsia;text-align:center">
       Copyright all reserved
-    </p> 
-
+    </p>
+  
 </body>
 </html>
 
