--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
    <br>
     <h2 style="color:blue;text-align:center">欢迎访问我的个人网页</h2>
     <br>
-<div style="width:960px;margin:0 auto;height:auto;">
+<div>
     <p style="text-align:center;">
 <img src="https://s1.328888.xyz/2022/08/02/OKo5E.jpg" width="500px" height="500px"></p></div>
       <br>
 <p style="text-align:center">
      <a href="mailto:000000000o@163.com">
-        联系我</a>
+        邮件联系我</a>
     </p>
 <p style="text-align:center">
     <a href="sms:18681256827">
