--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
 <div>
     <p style="text-align:center;">
-<img src="https://s1.328888.xyz/2022/08/02/OKo5E.jpg" width="500px" height="500px"></p></div>
+<img src="https://s1.328888.xyz/2022/08/02/OKo5E.jpg" width="400px" height="400px"></p></div>
       <br>
 <p style="text-align:center">
      <a href="mailto:000000000o@163.com">
@@ -25,7 +25,7 @@
     </p>
 <p style="text-align:center">
     <a href="sms:18681256827">
-        电话联系我</a>
+        短信联系我</a>
     </p>
     <p style="color: fuchsia;text-align:center">
       Copyright all reserved
